load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/abdulito/oidc-helper",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/abdulito/oidc-helper",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_coreos_gooidc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_oauth2//:go_default_library",
    ],
)

go_binary(
    name = "oidc-helper",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
